deploy/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.catbox.achkasov.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-api-service
                port:
                  number: 8080
